# static-hosting-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  manifest  pyproject.toml  qkcdhsr5lerblhuoh3jqgh6ffu6vgfep.darc
.gc/: settings.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
scripts/: release.sh
secrets/: .gitkeep
src/static_hosting_mcp/: __init__.py  config.py  formatters.py  gcs_client.py  server.py
tests/: conftest.py  fakes.py  mcp_harness.py  stdio_fake_server.py  test_config_unit.py  test_formatters.py  test_gcs_client.py  test_keys_and_types.py  test_live_integration.py  test_server_stdio.py  test_tools_unit.py
