[project]
name = "static-hosting-mcp"
version = "0.1.0"
description = "MCP server that publishes self-contained artifacts to a Google Cloud Storage bucket and manages per-object read access by Google-account email."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["mcp", "gcs", "google-cloud-storage", "static-hosting", "fastmcp"]
dependencies = [
    "mcp[cli]>=1.26,<2",
    "google-cloud-storage>=2.18",
    "pydantic>=2.12",
]

[project.scripts]
static-hosting-mcp = "static_hosting_mcp:main"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "python-dotenv>=1.2",
    "ruff>=0.15",
    "mypy>=1.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# Tooling configuration (mirrors the ultimate-brain-mcp reference)
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Pragmatic rule set: pyflakes/pycodestyle errors, import sorting, pyupgrade,
# bugbear, and comprehension lints — same selection as the reference server.
select = ["E", "F", "I", "UP", "B", "C4"]
# Line length is owned by the formatter; the long single-string
# Field(description=...) values in the tool layer can't be wrapped, so E501
# would only produce unfixable noise.
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
# FastMCP injects Context via a `ctx: Context = None` sentinel default on tool
# signatures; annotating it `Context | None` would defeat that type-based
# injection, so keep mypy's pre-0.990 implicit-Optional behaviour.
no_implicit_optional = false
# `mcp` ships without py.typed in the pinned range and google-cloud-storage's
# stubs are partial; keep the baseline clean rather than littering per-call
# ignores.
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
# Default invocation runs the credential-free unit tier only. The live tests
# (which need a real GCS bucket + the env vars in .env.example) are tagged
# `@pytest.mark.live` and deselected here; run them with `pytest -m live`.
addopts = "-m 'not live'"
markers = [
    "unit: credential-free unit test (runs by default)",
    "live: requires a live GCS bucket and credentials (see .env.example)",
]
