[project]
name = "static-hosting-mcp"
version = "0.1.0"
description = "MCP server that publishes self-contained artifacts to a Google Cloud Storage bucket and manages per-object read access by Google-account email."
readme = "README.md"
license = "MIT"
authors = [{ name = "Bobby Hyam" }]
requires-python = ">=3.11"
keywords = ["mcp", "gcs", "google-cloud-storage", "static-hosting", "fastmcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
dependencies = [
    "mcp[cli]>=1.26,<2",
    "google-cloud-storage>=2.18",
    "pydantic>=2.12",
]

[project.urls]
Homepage = "https://github.com/bobbyhyam/static-hosting-mcp"
Repository = "https://github.com/bobbyhyam/static-hosting-mcp"
Issues = "https://github.com/bobbyhyam/static-hosting-mcp/issues"
Changelog = "https://github.com/bobbyhyam/static-hosting-mcp/blob/main/CHANGELOG.md"

[project.scripts]
static-hosting-mcp = "static_hosting_mcp:main"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "python-dotenv>=1.2",
    "ruff>=0.15",
    "mypy>=1.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# Distribution boundaries (R10): pin the wheel package and the sdist contents
# so internal / operational directories never enter a published artifact.
# ---------------------------------------------------------------------------

[tool.hatch.build.targets.wheel]
packages = ["src/static_hosting_mcp"]

[tool.hatch.build.targets.sdist]
# Whitelist the user-facing distribution. Any future *user-facing* docs page
# must be added here explicitly (or the `docs/` exclude below narrowed to
# `docs/brainstorms/`), or it will be silently omitted from the sdist.
include = [
    "src/",
    "tests/",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]
# Defense in depth alongside the include whitelist: never ship internal or
# operational trees even if the selection logic changes.
exclude = [
    "plans/",
    ".gc/",
    "gascity/",
    ".beads/",
    "secrets/",
    "worktrees/",
    "docs/",
]

# ---------------------------------------------------------------------------
# Tooling configuration
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Pragmatic rule set: pyflakes/pycodestyle errors, import sorting, pyupgrade,
# bugbear, and comprehension lints.
select = ["E", "F", "I", "UP", "B", "C4"]
# Line length is owned by the formatter; the long single-string
# Field(description=...) values in the tool layer can't be wrapped, so E501
# would only produce unfixable noise.
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
# FastMCP injects Context via a `ctx: Context = None` sentinel default on tool
# signatures; annotating it `Context | None` would defeat that type-based
# injection, so keep mypy's pre-0.990 implicit-Optional behaviour.
no_implicit_optional = false
# `mcp` ships without py.typed in the pinned range and google-cloud-storage's
# stubs are partial; keep the baseline clean rather than littering per-call
# ignores.
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
# Default invocation runs the credential-free unit tier only. The live tests
# (which need a real GCS bucket + the env vars in .env.example) are tagged
# `@pytest.mark.live` and deselected here; run them with `pytest -m live`.
addopts = "-m 'not live'"
markers = [
    "unit: credential-free unit test (runs by default)",
    "live: requires a live GCS bucket and credentials (see .env.example)",
]
